--- a/_config.yml
+++ b/_config.yml
@@ -55,3 +55,7 @@ minima:
 # Set to `true` to show excerpts on the homepage.
 #
 # show_excerpts: false
+
+domain: aigen31.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://aigen31.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: /web-dev-portfolio/      # place folder name if the site is served in a subfolder
