--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,16 @@ minima:
 #
 # show_excerpts: false
 
-domain: aigen31.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: aigen31.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+# domain: aigen31.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+# url: aigen31.github.io  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: /web-dev-portfolio      # place folder name if the site is served in a subfolder
+
+include:
+    - _site
+
+exclude: 
+  - .gitignore
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
