--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,15 @@ description: >
 
 # Build settings
 
-theme: null
-local_theme: minima
+# theme: null
+# local_theme: minima
+remote_theme: aigen31/minima
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-local-theme
+  - jekyll-remote-theme
+  # - jekyll-local-theme
 
 # Theme-specific settings
 
