--- a/_config.yml
+++ b/_config.yml
@@ -58,4 +58,4 @@ minima:
 
 # domain: aigen31.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://aigen31.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /web-dev-portfolio/      # place folder name if the site is served in a subfolder
+baseurl: /web-dev-portfolio      # place folder name if the site is served in a subfolder
